<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f2d7fa"
    tools:context="me.ryanfinlayson.mrpotatohead.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potato_head_title"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/body"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/mustacheImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:src="@drawable/mustache"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/noseImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/nose"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/hatImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/mouthImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mouth"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/armsImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arms"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/glassesImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/glasses"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/earsImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ears"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/eyesImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eyes"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/eyebrowsImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eyebrows"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/shoesImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/bodyImageView"
        android:layout_marginTop="@dimen/image_top_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shoes"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bodyImageView"
        android:layout_marginTop="15dp"/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/bodyBox"
            android:text="@string/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/title"
            android:layout_toLeftOf="@+id/title"
            android:layout_toStartOf="@+id/title"
             />

        <CheckBox
            android:id="@+id/mustacheBox"
            android:text="@string/mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1" />

        <CheckBox
            android:id="@+id/noseBox"
            android:text="@string/nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"/>

        <CheckBox
            android:id="@+id/hatBox"
            android:text="@string/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"/>

        <CheckBox
            android:id="@+id/mouthBox"
            android:text="@string/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"/>

        <CheckBox
            android:id="@+id/armBox"
            android:text="@string/arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"/>

        <CheckBox
            android:id="@+id/glassesBox"
            android:text="@string/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"/>

        <CheckBox
            android:id="@+id/earsBox"
            android:text="@string/ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"/>

        <CheckBox
            android:id="@+id/eyesBox"
            android:text="@string/eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"/>

        <CheckBox
            android:id="@+id/eyebrowsBox"
            android:text="@string/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"/>

        <CheckBox
            android:id="@+id/shoesBox"
            android:text="@string/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0" />

    </GridLayout >




</RelativeLayout>

